tests/parser/validinput/overloadingfunctions.idp
vocabulary V{
	type X
	type Y
	f(X):X  
	f(X):Y
	g(X):X
}

theory T:V{
	!x: f(x) = g(x).
}


procedure main(){
	return 1
}
