tests/parser/invalidinput/parseerror4.idp
vocabulary V{
	type X
	type Y
	f(X):Y
	f(X):Y
}

procedure main(){
	return 1
}
